# ddr-umctl

./: .gitignore  CLAUDE.md  CMakeLists.txt  CREATE_NEW_CONFIG.md  GETTING_STARTED.md  README.adoc
configs/boards/: lan966x_ref.yaml  lan969x_evb969x.yaml  lan969x_svb969x.yaml  pcb134.yaml  pcb135.yaml
configs/memory/: alliance_ddr4_1024Mx8.yaml  alliance_ddr4_512Mx16.yaml  alliance_ddr4_512Mx16_inline_ecc.yaml  ddr3_512Mx16_2B.yaml  ddr3_512Mx8.yaml  ddr3_512Mx8_halfbus_lan9xxx.yaml  ddr4_512Mx16_fullbus_2B.yaml  ddr4_512Mx8_fullbus.yaml  ddr4_512Mx8_fullbus_2B.yaml  ddr4_512Mx8_halfbus.yaml  ddr4_512Mx8_halfbus_lan969x.yaml  ddr4_512Mx8_halfbus_sparx5.yaml  issi_ddr3_512Mx16.yaml  issi_ddr3_512Mx8.yaml  issi_ddr3_512Mx8_16bit.yaml  micron_ddr4_16bit.yaml  micron_ddr4_512Mx8.yaml
configs/profiles/: lan966x.yaml  lan969x.yaml  lan969x_evb_ddr4.yaml  lan969x_svb_ddr3.yaml  pcb134_ddr4.yaml  pcb134_ddr4_16bit.yaml  pcb134_ddr4_half.yaml  pcb134_ddr4_half_ecc.yaml  pcb135_ddr3.yaml  pcb135_ddr3_16bit.yaml  pcb135_ddr3_half.yaml
doc/: ddr-umctl.adoc  registers.adoc  sw-doc-ddr.adoc
include/: ddr_config.h  ddr_init.h  ddr_platform.h  ddr_platform_uboot.h  ddr_reg.h
include/lan966x/: ddr_config.h  ddr_reg.h  ddr_xlist.h
include/lan969x/: ddr_config.h  ddr_reg.h  ddr_xlist.h
include/sparx5/: ddr_config.h  ddr_reg.h  ddr_xlist.h
output/: laguna.yaml  lan966x.yaml  lan969x.yaml  maserati.yaml  pcb134_ddr4.yaml  pcb134_ddr4_16_bit.yaml  pcb134_ddr4_16bit.yaml  pcb135_ddr3.yaml  pcb135_ddr3_16bit.yaml
scripts/: config_registers.rb  diff_cfg.rb  extract_config.rb  filter_conf.rb  fmt_cfg.rb  gen_cfg.rb  gen_ddr_js.rb  header.rb  init_analyze.rb  log_annotate.rb  make_doc.rb  make_headers.rb  reg_show.rb  register_def.rb  register_use.rb  rewrite_driver.rb
scripts/ddr/: ddr3.rb  ddr4.rb  ddr_process.rb
scripts/profiles/: ddr3_ref.yaml  ddr4_ref.yaml  lan966x.yaml  lan969x.yaml  micron_2M_8.yaml  pcb134_ddr4.yaml  pcb135_ddr3.yaml  sparx5.yaml
scripts/soc/: Sparx5.yaml  chip.rb  ddr_config.yaml  lan966x.yaml  lan969x.yaml  sparx5.yaml  sparx5_soc.rb
scripts/support/: extract_config.rb  filter_conf.rb  init_analyze.rb  log_annotate.rb  reg_show.rb  register_use.rb  rewrite_driver.rb
scripts/templates/: ddr_config.erb  ddr_js.erb  ddr_reg.erb  ddr_xlist.erb  devicetree.erb  header.erb  reg_doc.erb  register_def.erb  source.erb  yaml.erb
src/: Makefile  ddr_umctl.c  main.c  pcb134_config.c  pcb134_ddr4_config.c  pcb135_config.c  pcb135_ddr3_config.c  sparx5_reset.c
trace/: fireant_ddr3.txt  fireant_ddr3_new.txt  fireant_ddr4.txt  fireant_ddr4_new.txt  tcl_ddr.txt
